# aikontrakt

./: .gitignore  README.md  init.ts  key.addr  key.sk  lock.ts  lock_tx_id  run_using_csl.ps1  run_using_lucid.ps1  rust_unlock_tx.json  script_hex  unlock.ts
hello_world/: README.md  aiken.toml  plutus.json
hello_world/validators/: hello_world.ak
rusty/: Cargo.toml
rusty/src/: lib.rs
