[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-serialization-lib = "*"
blockfrost = { git="https://github.com/OlofBlomqvist/blockfrost-rust" }
tokio = {version="1.25.0",features=["macros"]}
hex = "0.4.3"
